[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Level_root.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/INGAME_UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/red-vignette.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "cam_shake"

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/INGAME_UI/dmg_border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.372549 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Level/Camera:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://assets/fonts/Teko/Teko-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Level_root" type="Node2D"]
script = ExtResource( 2 )

[node name="GlobalAnims" type="AnimationPlayer" parent="."]
playback_speed = 5.07
anims/cam_shake = SubResource( 1 )
anims/dmg_average = SubResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="INGAME_UI" parent="HUD" instance=ExtResource( 3 )]
mouse_filter = 2
theme = SubResource( 5 )

[node name="dmg_border" type="TextureRect" parent="HUD/INGAME_UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="." instance=ExtResource( 1 )]

[connection signal="paused" from="HUD/INGAME_UI" to="." method="_on_INGAME_UI_paused"]
